gcp-client/jumphost/manifests/lb-external-tls-v1.yaml
# lb-external.yaml extension with TLS support
# Takes 10+ minutes to issue certifcate. Consider own ClusterIssuer + ACMEDNS + LE CA.
# Use static IP (to ensure stable validation process):  
  # Create static IP:
  # gcloud compute addresses create hostname-external-tls --global    
  # gcloud compute addresses describe hostname-external-tls --global
  # Release static IP:  
  # gcloud compute addresses delete hostname-external-tls --global

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hostname-external-tls
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: hostname-external-tls
    networking.gke.io/managed-certificates: hostname-external-tls
spec:
  rules:
  - host: lala.sandbox.pan-net.cloud
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: hostname-external-tls
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: hostname-external-tls
spec:
  type: NodePort
  selector:
    app: hostname-external-tls
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9376

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostname-external-tls
  labels:
    app: hostname-external-tls
spec:
  selector:
    matchLabels:
      app: hostname-external-tls
  replicas: 3
  template:
    metadata:
      labels:
        app: hostname-external-tls
    spec:
      containers:
      - image: k8s.gcr.io/serve_hostname:v1.4
        name: hostname-external-tls
        ports:
        - containerPort: 9376
          protocol: TCP
